Update design: apply Manrope font, improve equipment card styles, configure gradient backgrounds

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta name="apple-mobile-web-app-title" content="Оборудование" />
     <meta name="description" content="Система для управления оборудованием и журналом обслуживания" />
     
+    <!-- Google Fonts - Manrope -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/icons/icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png" />
